Fixes `<dwac-share>` prompt.
This component was recently updated to a hard 44px height to avoid CLS, but if it renders a prompt string, the content overflows. To address this, I pulled the prompt string outside `<dwac-share>` so it can remain the hard-coded 44px regardless of the prompt being there. This also prerenders the prompt string which makes it a little more accessible.

--- a/src/www/_includes/fragments/share.css
+++ b/src/www/_includes/fragments/share.css
@@ -1,4 +1,12 @@
-dwac-share {
+.frag-share {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+
+    text-align: center;
+}
+
+.frag-share > dwac-share {
     display: block;
     height: 44px; /* Set height during initial render to avoid CLS. */
 }
